--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "dependencies": {
+    "@fastify/rate-limit": "^10.2.2",
+    "@fastify/websocket": "^11.0.2",
     "body-parser": "^1.20.3",
+    "bullmq": "^5.39.0",
     "cors": "^2.8.5",
     "docker": "^1.0.0",
     "dockerode": "^4.0.4",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "fastify": "^5.2.1",
+    "ioredis": "^5.4.2",
+    "morgan": "^1.10.0",
+    "pino": "^9.6.0",
+    "redis": "^4.7.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-loki": "^6.1.3",
+    "zod": "^3.24.1"
   },
   "name": "runicaxor",
   "version": "1.0.0",
@@ -27,6 +40,9 @@
   },
   "homepage": "https://github.com/itisrohit/RunicAxor#readme",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@types/node": "^22.12.0",
+    "nodemon": "^3.1.9",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
