--- a/workers/docker/nodejs/Dockerfile
+++ b/workers/docker/nodejs/Dockerfile
@@ -1,31 +1,17 @@
-# Use official Node.js Alpine image (smallest secure base)
 FROM node:20-alpine
 
-# ===== SECURITY HARDENING =====
-# Create non-root user/group with least privileges
-RUN addgroup -S runner && adduser -S runner -G runner -h /app
+# Security setup
+RUN addgroup -S runner && adduser -S runner -G runner \
+    && mkdir /app \
+    && chown -R runner:runner /app
 
-# Configure secure workspace
 WORKDIR /app
+USER runner
+
+# Security configurations
 RUN chmod 555 /app && \
     mkdir -p /tmp && \
     chmod 777 /tmp
 
-# Block potential attack vectors
-ENV NODE_ENV=production \
-    NODE_OPTIONS="--disallow-code-generation-from-strings" \
-    NODE_NO_WARNINGS=1 \
-    OPENSSL_CONF=/dev/null
-
-# Install common build dependencies (prevents arbitrary `npm install` failures)
-RUN apk add --no-cache --virtual .build-deps \
-    python3 \
-    make \
-    g++
-
-# ===== RUNTIME CONFIGURATION =====
-# Drop privileges
-USER runner
-
-# Disable Node.js inspector
-CMD ["node", "--no-experimental-fetch", "--disable-proto=delete"]
+# Runtime flags for security
+CMD ["node", "--no-deprecation", "--disallow-code-generation-from-strings", "-e", "process.stdin.on('data', d => { try { eval(d.toString()) } catch(e) { process.exit(1) } })"]
